# stremio-linux-shell

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  com.stremio.App.Devel.json  com.stremio.App.json
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
build-aux/flatpak/: build.sh
data/: com.stremio.App.desktop  com.stremio.App.metainfo.xml  com.stremio.Stremio.metainfo.xml  stremio
flatpak/: build.sh  com.stremio.Stremio.Devel.json
src/: config.rs  constants.rs  instance.rs  ipc.rs  main.rs  server.rs
src/app/: adapters.rs  config.rs  imp.rs  mod.rs  preload.js  utils.rs
src/app/ipc/: event.rs  request.rs  response.rs
src/app/tray/: imp.rs
src/app/video/: config.rs  imp.rs  mod.rs
src/app/webview/: mod.rs
src/app/window/: imp.rs  mod.rs
src/player/: constants.rs  mod.rs
src/server/: config.rs  mod.rs
src/shared/: mod.rs  types.rs
src/shared/renderer/: constants.rs  mod.rs  shader.frag  shader.vert  utils.rs
src/webview/: adapters.rs  cef_impl.rs  constants.rs  mod.rs  preload.js
src/webview/app/: browser_process_handler.rs  mod.rs  render_process_handler.rs  utils.rs  v8_handler.rs
src/webview/app/client/: display_handler.rs  lifespan_handler.rs  load_handler.rs  mod.rs  render_handler.rs
