[package]
name = "stremio-linux-shell"
authors = ["Stremio"]
version = "1.0.0-beta.1"
description = "Freedom to Stream"
edition = "2024"
license = "GPL-3.0-only"

[features]
offline-build = []

[dependencies]
anyhow = "1.0.98"
cef = { version = "135.0.21", git = "https://github.com/Stremio/cef-rs" }
cef-dll-sys = { version = "135.0.21", git = "https://github.com/Stremio/cef-rs" }
clap = { version = "4.5.37", features = ["derive"] }
gl = "0.14.0"
glutin = "0.32.2"
glutin-winit = "0.5.0"
itertools = "0.14.0"
libmpv2 = { git = "https://github.com/Stremio/libmpv2-rs" }
once_cell = "1.21.3"
paste = "1.0.15"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shellexpand = "3.1.1"
tracing = "0.1.41"
url = "2.5.4"
winit = "0.30.9"

[build-dependencies]
anyhow = "1.0.98"
bzip2 = "0.5.2"
dircpy = "0.3.19"
globset = "0.4.16"
serde = "1.0.219"
tar = "0.4.44"
toml = "0.8.20"
ureq = { version = "3.0.11", features = ["json"] }

