[package]
name = "stremio-linux-shell"
version = "1.0.0-beta.12"
authors = ["Stremio"]
homepage = "https://stremio.com"
repository = "https://github.com/Stremio/stremio-linux-shell"
license = "GPL-3.0-only"
edition = "2024"

[dependencies]
gtk = { package = "gtk4", version = "0.10.0", features = ["v4_18"] }
adw = { package = "libadwaita", version = "0.8.0", features = ["v1_7"] }
webkit = { package = "webkit6", version = "0.5.0", features = ["v2_46"] }
tokio = { version = "1.47.1", features = ["full"] }
ashpd = { version = "0.12.0", features = ["gtk4"] }
ksni = "0.3.1"
libloading = "0.8.8"
epoxy = "0.1.0"
serde_json = "1.0.142"
tracing = "0.1.41"
serde = "1.0.219"
libc = "0.2.175"
itertools = "0.14.0"
tracing-subscriber = "0.3.19"
rand = "0.9.2"
libmpv2 = "5.0.1"
clap = { version = "4.5.45", features = ["derive"] }
image = "0.25.6"
chrono = "0.4.41"
reqwest = { version = "0.12.23", features = ["json"] }
anyhow = "1.0.99"
url = "2.5.7"
dirs = "6.0.0"
gettext-rs = { version = "0.7.2", features = ["gettext-system"] }

[build-dependencies]
anyhow = "1.0.99"
